--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@ timezone: Asia/Shanghai
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title:gan                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+#tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
-description: >-                        # used by seo meta and the atom feed
+#description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
   bootstrap Jekyll theme with responsive web design
   and focuses on text presentation.
