--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title:gan                          # the main title
 
 #tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
-#description: >-                        # used by seo meta and the atom feed
+description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
   bootstrap Jekyll theme with responsive web design
   and focuses on text presentation.
